--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "backbone": "^1.3.2",
     "co": "^4.6.0",
     "koa": "^2.0.0-alpha.3",
     "koa-bodyparser": "^2.0.1",
@@ -16,6 +17,23 @@
     "koa-router": "^5.4.0",
     "koa-static": "^2.0.0",
     "koa-swig": "^2.1.0",
-    "socket.io": "^1.4.5"
+    "mongoose": "^4.4.10",
+    "node-forge": "^0.6.39",
+    "node-uuid": "^1.4.7",
+    "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "babel-core": "^6.6.5",
+    "babel-loader": "^6.2.4",
+    "babel-preset-react": "^6.5.0",
+    "gulp": "^3.9.1",
+    "gulp-env": "^0.4.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-mocha": "^2.2.0",
+    "gulp-util": "^3.0.7",
+    "webpack": "^1.12.14",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "request": "^2.69.0"
   }
 }
